# mp-movement-classifier

./: .gitignore  README.md  pyproject.toml
PyMO/: preprocessing.py  viz_tools.py
bvh_converter/: h36m_original_skeleton.py  h36m_skeleton.py
mp_movement_classifier/classification/: classification.py  visualize_joint_angles.py
mp_movement_classifier/tmp_extraction/: TMP_model.py  animation_joints.py  convert_pos2motionCapture.py  cutoff_freq_selection.py  expmap_conversion.py  filter_3d_positions_data.py  main.py  motion_segment_animator.py  torch_hessian.py  visualize_joint_angles.py  weight_visulaization.py
mp_movement_classifier/utils/: __init__.py  config.py  h36m_csv_converter.py  plotting.py  utils.py
notebooks/: 2_process_videos.ipynb
